Create request reports
